added  class/style/attr data bindings to live-dom-template

--- a/live-dom-editor/index.html
+++ b/live-dom-editor/index.html
@@ -12,7 +12,7 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/product/">
     
     <!-- FIXME: add the styles inside the webcomponent -->
-    <link rel="stylesheet" href="dist/live-dom-editor.min.css">
+    <!-- <link rel="stylesheet" href="dist/live-dom-editor.min.css"> -->
     <script src="/dist/live-dom-editor.js"></script>
 
     <!-- Bootstrap core CSS -->
