using a syntax similar to the HTML style attribute to store complex attribute values

--- a/data-grid/index.html
+++ b/data-grid/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-    <frmdb-data-grid></frmdb-data-grid>
+    <frmdb-data-grid tableName="InventoryProduct" gridColumns="code: {}; name: {}; description: {}"></frmdb-data-grid>
     <script src="../dist/frmdb-data-grid.js"></script>
 </body>
 </html>
