--- a/fe/src/data-grid/index.html
+++ b/fe/src/data-grid/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
     <frmdb-data-grid tableName="InventoryProduct" gridColumns="code; name; description"></frmdb-data-grid>
-    <script src="../dist/frmdb-data-grid.js"></script>
+    <script src="../../../dist/frmdb-data-grid.js"></script>
 </body>
 </html>
