using dockerc-compose as npm serve during dev

--- a/fe/src/data-grid/index.html
+++ b/fe/src/data-grid/index.html
@@ -8,6 +8,6 @@
     </style>
 <body>
     <frmdb-data-grid tableName="InventoryProduct" gridColumns="code; name; description"></frmdb-data-grid>
-    <script src="../../../dist/frmdb-data-grid.js"></script>
+    <script src="formuladb/frmdb-data-grid.js"></script>
 </body>
 </html>
