normalize HTML before saving

--- a/vvvebjs/editor.html
+++ b/vvvebjs/editor.html
@@ -913,6 +913,8 @@
 
 <script src="libs/customize-editor.js"></script>	
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/js-beautify/1.10.1/beautify-html.js"></script>
+
 </script>
 </body>
 </html>
