started adding Inventory app

--- a/portal/public/index.html
+++ b/portal/public/index.html
@@ -198,13 +198,13 @@
 			</nav>
 
 			<div class="grid">
-				<a href="javascript:alert('Pre-order Now! App ready in one week!')" class="admin item" target="_blank" data-category="Admin &amp; Dashboard">
+				<a href="/formuladb-editor/editor.html?t=frmdb-apps&a=inventory&p=index" class="admin item" data-category="Admin &amp; Dashboard">
 					<div class="card">
 						<div class="card-header text-center">
-							<div class="item-name">Star Admin</div>
+							<div class="item-name">Inventory</div>
 							<div class="item-category">Admin &amp; Dashboard</div>
 						</div>
-						<img class="card-img-bottom" src="assets/images/1-star-admin.png" alt="Card image cap">
+						<img class="card-img-bottom" src="assets/images/sb-admin-2.png" alt="Card image cap">
 					</div>
 				</a>
 				<a href="/formuladb-editor/editor.html?t=frmdb-apps&a=hotel-booking&p=index" class="travel item" data-category="Travel &amp; Booking">
@@ -250,6 +250,15 @@
 							<div class="item-category">Landing Pages</div>
 						</div>
 						<img class="card-img-bottom" src="assets/images/5-unapp.png" alt="Card image cap">
+					</div>
+				</a>
+				<a href="javascript:alert('Pre-order Now! App ready in one week!')" class="admin item" target="_blank" data-category="Admin &amp; Dashboard">
+					<div class="card">
+						<div class="card-header text-center">
+							<div class="item-name">Star Admin</div>
+							<div class="item-category">Admin &amp; Dashboard</div>
+						</div>
+						<img class="card-img-bottom" src="assets/images/1-star-admin.png" alt="Card image cap">
 					</div>
 				</a>
 				<a href="javascript:alert('Pre-order Now! App ready in one week!')" class="landing item" target="_blank" data-category="Landing Pages">
