--- a/vvvebjs/editor.html
+++ b/vvvebjs/editor.html
@@ -119,7 +119,7 @@
 					  </div>
 					  
 					  
-					  <div class="drag-elements d-none">
+					  <div class="drag-elements">
 
 						<div class="header">							
 							<ul class="nav nav-tabs" id="elements-tabs" role="tablist">
