added new table modal

--- a/vvvebjs/editor.html
+++ b/vvvebjs/editor.html
@@ -924,6 +924,45 @@
 
 			</div>
 		</div>
+
+		<!-- new Table modal-->
+		<div class="modal fade" id="new-table-modal" tabindex="-1" role="dialog">
+			<div class="modal-dialog" role="document">
+
+				<form>
+
+					<div class="modal-content">
+						<div class="modal-header">
+							<p class="modal-title text-primary"><i class="la la-lg la-table"></i> New Table</p>
+							<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+								<span aria-hidden="true"><small><i class="la la-close"></i></small></span>
+							</button>
+						</div>
+
+						<div class="modal-body text">
+
+							<div class="form-group row" data-key="href">
+								<label class="col-sm-3 control-label">Table name</label>
+								<div class="col-sm-9 input">
+									<div>
+										<input name="tableName" type="text" class="form-control" placeholder="New_Table_Name" required>
+									</div>
+								</div>
+							</div>
+
+						</div>
+
+						<div class="modal-footer">
+							<button class="btn btn-primary btn-lg" type="submit"><i class="la la-check"></i> Create Table</button>
+							<button class="btn btn-secondary btn-lg" type="reset" data-dismiss="modal"><i class="la la-close"></i> Cancel</button>
+						</div>
+					</div>
+
+				</form>
+
+			</div>
+		</div>		
+
 	</div>
 
 	<!-- jquery-->
