--- a/vvvebjs/editor.html
+++ b/vvvebjs/editor.html
@@ -75,6 +75,10 @@
 					  </button>
 					</div>	
 
+					<div class="btn-group float-right" role="group">
+						<select id="frmdb-editor-i18n-select">
+						</select>
+					</div>
 
 					<div class="btn-group float-right responsive-btns" role="group">
 		 			 <button id="mobile-view" data-view="mobile" class="btn btn-light"  title="Mobile view" data-vvveb-action="viewport">
@@ -882,7 +886,8 @@
 <!-- bootstrap-->
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
-
+<!-- i18n code-->
+<script src="libs/builder/i18n.js"></script>	
 <!-- builder code-->
 <script src="libs/builder/builder.js"></script>	
 <!-- undo manager-->
