batch translations; removed data-18n; placeholders; mapped translation

--- a/vvvebjs/editor.html
+++ b/vvvebjs/editor.html
@@ -232,14 +232,14 @@
 							</div>
 
 							<div id="select-box">
-
+<!-- 
 								<div id="wysiwyg-editor">
 										<a id="bold-btn" href="" title="Bold"><i><strong>B</strong></i></a>
 										<a id="italic-btn" href="" title="Italic"><i>I</i></a>
 										<a id="underline-btn" href="" title="Underline"><u>u</u></a>
 										<a id="strike-btn" href="" title="Strikeout"><del>S</del></a>
 										<a id="link-btn" href="" title="Create link"><strong>a</strong></a>
-								</div>
+								</div> -->
 
 								<div id="select-actions">
 									<a id="drag-btn" href="" title="Drag element"><i class="la la-arrows"></i></a>
