#140 i18n working with translations cached in FormulaDB

--- a/vvvebjs/editor.html
+++ b/vvvebjs/editor.html
@@ -186,13 +186,13 @@
 				<div class="header">
 					<ul class="nav nav-tabs" id="elements-tabs" role="tablist">
 						<li class="nav-item component-tab">
-							<a class="nav-link active" id="components-tab" data-toggle="tab" href="#components" role="tab" aria-controls="components"
+							<a class="nav-link py-2 active" id="components-tab" data-toggle="tab" href="#components" role="tab" aria-controls="components"
 								aria-selected="true"><i class="la la-lg la-cube"></i>
 								Components
 							</a>
 						</li>
 						<li class="nav-item blocks-tab">
-							<a class="nav-link" id="blocks-tab" data-toggle="tab" href="#blocks" role="tab" aria-controls="blocks" aria-selected="false"><i
+							<a class="nav-link py-2" id="blocks-tab" data-toggle="tab" href="#blocks" role="tab" aria-controls="blocks" aria-selected="false"><i
 									class="la la-lg la-image"></i>
 								Blocks
 							</a>
@@ -1080,7 +1080,6 @@
 	<script src="js/jquery.hotkeys.js"></script>
 
 	<!-- builder code-->
-	<script src="libs/builder/i18n.js"></script>
 	<script src="libs/builder/builder.js"></script>
 	<!-- undo manager-->
 	<script src="libs/builder/undo.js"></script>
@@ -1095,7 +1094,7 @@
 -->
 
 	<!-- components-->
-	<script src="libs/builder/components-server.js"></script>
+	<!-- <script src="libs/builder/components-server.js"></script> -->
 	<script src="libs/builder/components-bootstrap4.js"></script>
 	<script src="libs/builder/components-widgets.js"></script>
 
