work in progress

--- a/vvvebjs/editor.html
+++ b/vvvebjs/editor.html
@@ -73,14 +73,10 @@
 			</div>
 
 			<div class="btn-group mr-3" role="menu">
-				<button class="btn btn-sm" id="color-palette-select" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				<button class="btn btn-sm" id="frmdb-editor-color-palette-select" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 					<i class="la la-square text-success"></i>
 				</button>
-				<div class="dropdown-menu" aria-labelledby="color-palette-select">
-					<a class="dropdown-item" title="Comming Soon"><i class="la la-square text-success"></i></a>
-					<a class="dropdown-item" title="Comming Soon"><i class="la la-square text-danger"></i></a>
-					<a class="dropdown-item" title="Comming Soon"><i class="la la-square text-warning"></i></a>
-					<a class="dropdown-item" title="Comming Soon"><i class="la la-square text-info"></i></a>
+				<div class="dropdown-menu" aria-labelledby="frmdb-editor-color-palette-select">
 				</div>
 			</div>
 
