#140 highligh for form

--- a/vvvebjs/editor.html
+++ b/vvvebjs/editor.html
@@ -124,8 +124,8 @@
 				<li class="nav-item">
 					<a class="nav-link disabled" href="javascript:void(0)" tabindex="-1" aria-disabled="true">Table</a>
 				</li>
-				<li class="nav-item dropdown flex-grow-1" id="frmdb-editor-table-list">
-					<a class="nav-link dropdown-toggle text-center" id="frmdb-editor-selected-table" data-toggle="dropdown" href="javascript:void(0)"
+				<li class="nav-item dropdown flex-grow-1">
+					<a class="nav-link dropdown-toggle text-center" data-toggle="dropdown" href="javascript:void(0)"
 						aria-haspopup="true" aria-expanded="false" data-frmdb-value="$frmdb.selectedTableId">
 					</a>
 					<div class="dropdown-menu">
