--- a/vvvebjs/editor.html
+++ b/vvvebjs/editor.html
@@ -10,7 +10,7 @@
 	<meta name="author" content="">
 	<link rel="icon" href="favicon.ico">
 	<base href="">
-	<title>VvvebJs</title>
+	<title>FormulaDB Editor - Build Applications Without Code</title>
 
 	<link href="css/editor.css" rel="stylesheet">
 	<link href="css/line-awesome.css" rel="stylesheet">
