#171 started centralizing all metadata processing in metadata_store

--- a/vvvebjs/editor.html
+++ b/vvvebjs/editor.html
@@ -62,21 +62,24 @@
 					<i class="la la-arrows"></i>
 				</button>
 
-				<button id="code-editor-btn" data-view="mobile" class="btn btn-sm btn-light btn-sm" title="Page Code Editor"
+				<button id="code-editor-btn" data-view="mobile" class="btn btn-sm btn-light btn-sm" title="Code Editor"
 					data-vvveb-action="togglePageEditor">
 					<i class="la la-file-code-o"></i>
 				</button>
 
-				<button id="table-code-editor-btn" data-view="mobile" class="btn btn-sm btn-light btn-sm" title="Table Code Viewer"
+				<button id="table-code-editor-btn" data-view="mobile" class="d-none btn btn-sm btn-light btn-sm" title="Table Code Viewer"
 					data-vvveb-action="toggleTableEditor">
 					<i class="la la-code-fork"></i>
 				</button>
 			</div>
 
 			<div class="btn-group mr-3" role="group">
-				<button class="btn btn-light" title="Export (Ctrl + E)" id="save-btn" data-vvveb-action="saveAjax" data-vvveb-shortcut="ctrl+e">
+				<button class="btn btn-light" title="Save Page" id="save-btn" data-vvveb-action="saveAjax">
 					<i class="la la-save"></i>
 				</button>
+				<!-- <button class="btn btn-light" title="Publish App" id="publish-btn" data-vvveb-action="saveApp">
+					<i class="la la-upload"></i>
+				</button> -->
 			</div>
 
 			<div class="btn-group mr-3" role="menu">
