--- a/vvvebjs/editor.html
+++ b/vvvebjs/editor.html
@@ -77,9 +77,9 @@
 				<button class="btn btn-light" title="Save Page" id="save-btn" data-vvveb-action="saveAjax">
 					<i class="la la-save"></i>
 				</button>
-				<!-- <button class="btn btn-light" title="Publish App" id="publish-btn" data-vvveb-action="saveApp">
+				<button disabled class="btn btn-light" title="Publish to live environment" id="publish-btn" data-vvveb-action="saveApp">
 					<i class="la la-upload"></i>
-				</button> -->
+				</button>
 			</div>
 
 			<div class="btn-group mr-3" role="menu">
@@ -118,6 +118,18 @@
 		</div>
 
 		<div id="left-panel">
+			<div style="border-bottom: 1px solid #BDC3C7; background:linear-gradient(150deg,#7795f8 15%,#6772e5 70%,#555abf 94%)">
+				<img src="/formuladb/img/logo.png" style="width: 110px; height: 32px;" />
+				<div class="dropdown float-right">
+					<button class="btn btn-sm dropdown-toggle text-light" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						<span class="badge badge-pill badge-light text-danger">live</span>
+					</button>
+					<div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+						<a class="dropdown-item text-success" href="javascript:void(0)">demo</a>
+						<a class="dropdown-item text-danger" href="javascript:void(0)">live</a>
+					</div>
+				</div>
+			</div>
 
 			<ul class="nav flex-row pl-1">
 				<li class="nav-item">
