--- a/vvvebjs/editor.html
+++ b/vvvebjs/editor.html
@@ -914,7 +914,7 @@
 			<div class="modal-dialog" role="document">
 				<div class="modal-content">
 					<div class="modal-header">
-						<p class="modal-title text-primary"><i class="la la-lg la-comment"></i> VvvebJs</p>
+						<p class="modal-title text-primary"><i class="la la-lg la-comment"></i> FormulaDB</p>
 						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 							<span aria-hidden="true"><small><i class="la la-close"></i></small></span>
 						</button>
