--- a/vvvebjs/editor.html
+++ b/vvvebjs/editor.html
@@ -125,8 +125,8 @@
 						<span class="badge badge-pill badge-light text-danger">live</span>
 					</button>
 					<div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-						<a class="dropdown-item text-success" href="javascript:void(0)">demo</a>
-						<a class="dropdown-item text-danger" href="javascript:void(0)">live</a>
+						<a class="dropdown-item text-success" title="Test Database" href="javascript:void(0)">test</a>
+						<a class="dropdown-item text-danger" title="Live Database" href="javascript:void(0)">live</a>
 					</div>
 				</div>
 			</div>
@@ -174,7 +174,7 @@
 						<i class="la la-ellipsis-v"></i>
 					</a>
 					<div class="dropdown-menu dropdown-menu-right" aria-labelledby="table-options">
-						<a class="dropdown-item" id="new-table-btn" title="New Table"><i class="la la-plus-circle"></i> New Page</a>
+						<a class="dropdown-item" id="new-page-btn" title="New Table"><i class="la la-plus-circle"></i> New Page</a>
 						<div class="dropdown-divider"></div>
 						<a class="dropdown-item" id="TBD" title="New Table"><i class="la la-trash"></i> Delete <span data-frmdb-value="$frmdb.selectedPageName"></span></a>
 					</div>
